--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -4,8 +4,13 @@ import com.example.utils.CommonUtils;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import javax.persistence.Entity;
+import javax.persistence.Id;
+
 @Data
 @NoArgsConstructor
+@Entity
 public class ${entityName} {
-
+    @Id
+    private String id;
 }
